# ODE-Solver

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  Integrator.cpp  Integrator.h  Makefile  ODESolver.cpp  ODESolver.h  README.md  main.cpp  plot.plt
src/: Algebra.cpp  Algebra.h  Context.cpp  Context.h  NewtonSolver.cpp  NewtonSolver.h  ODESolver.cpp  ODESolver.h  Utils.cpp  Utils.h  main.cpp
